# research_and_report_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: report.py  research.py  supervisor.py
app/agents/subagents/: document_agent.py  health_agent.py  pharma_agent.py  summary_agent.py
app/core/: agent_state.py  graph.py  routing_models.py
app/tools/: search_tool.py
app/utils/: llms.py
